--- a/01_Graphql/package.json
+++ b/01_Graphql/package.json
@@ -4,12 +4,17 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node src/index.js",
+    "dev": "nodemon src/index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "graphql-yoga": "^1.18.2"
+  },
+  "devDependencies": {
+    "nodemon": "^1.19.1"
   }
 }
