--- a/01_Graphql/package.json
+++ b/01_Graphql/package.json
@@ -12,9 +12,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "graphql-yoga": "^1.18.2"
+    "bcrypt": "^3.0.6",
+    "graphql-yoga": "^1.18.2",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.6.10"
   },
   "devDependencies": {
+    "dotenv": "^8.1.0",
     "nodemon": "^1.19.1"
   }
 }
