--- a/01_Graphql/package.json
+++ b/01_Graphql/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^3.0.6",
+    "graphql-import": "^0.7.1",
     "graphql-yoga": "^1.18.2",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.6.10"
